# YA-GPT

./: .gitignore  BLOG.md  README.md  flake.nix  improvements.md  main.py  pyproject.toml
__marimo__/session/: pretrain-gpt.py.json  pretrain-gpy.py.json
blog/: BLOG.md  blog.html  pandoc.txt  style.css
notebooks/: gpt.ipynb  pretrain-gpt.py
notebooks/.ipynb_checkpoints/: gpt-checkpoint.ipynb  pretrain-gpt-checkpoint.py
src/: tokenizer.py  train.py
src/data/: __init__.py  data.py  tokenizer.py
src/engine/: CMakeLists.txt  README.md  blis.cpp  matmul.cpp
src/engine/src/: main.cpp
src/model/: gpt.py  model.py
