[project]
name = "ya-gpt"
version = "1.0.0"
description = "Yet another GPT implementation from scratch! Intended for educational use."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "ipykernel>=7.2.0",
    "marimo>=0.22.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]
